--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,3 +3,33 @@ body {
   padding: 0;
   box-sizing: border-box;
 }
+
+.links {
+  margin-top: 1rem;
+  color: #4d4983;
+  text-decoration: none;
+}
+
+.error {
+  background: rgba(255, 0, 0, 0.5);
+  font-size: 1rem;
+  font-weight: bold;
+  padding: 0.9rem 1rem;
+  border-radius: 15px;
+  width: 80%;
+  text-align: center;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: white;
+  margin-bottom: 1rem;
+  border: 1px solid rgba(255, 0, 0, 0.5);
+}
+
+.input__error {
+  color: red;
+  margin-left: 7px;
+  margin-top: -5px;
+  font-weight: normal;
+  font-size: 16px;
+}
